.metadata/.plugins/org.eclipse.cdt.ui/TP Final.build.log
14:58:39 **** Incremental Build of configuration Debug for project TP Final ****
make -j4 all 
arm-none-eabi-gcc "../Src/hd44780.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F429ZITx -DSTM32F4 -DNUCLEO_F429ZI -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Inc -I"/home/felipe/Desktop/PdM_workspace/TP Final/Drivers/STM32F4xx_HAL_Driver/Inc" -I"/home/felipe/Desktop/PdM_workspace/TP Final/Drivers/CMSIS/Include" -I"/home/felipe/Desktop/PdM_workspace/TP Final/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/felipe/Desktop/PdM_workspace/TP Final/Drivers/BSP/STM32F4xx_Nucleo_144" -I"/home/felipe/Desktop/PdM_workspace/TP Final/Drivers/Core/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/hd44780.d" -MT"Src/hd44780.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/hd44780.o"
../Src/hd44780.c:1:19: error: unknown type name 'uint8_t'
    1 | void HD44780_Init(uint8_t rows)
      |                   ^~~~~~~
../Src/hd44780.c:1:1: note: 'uint8_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
  +++ |+#include <stdint.h>
    1 | void HD44780_Init(uint8_t rows)
make: *** [Src/subdir.mk:28: Src/hd44780.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

14:58:39 Build Failed. 2 errors, 0 warnings. (took 628ms)

